<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ads="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:id="@id/customViewContainer" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <WebView android:id="@id/webView" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
    <ProgressBar android:id="@id/progressBar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminate="true" android:indeterminateDrawable="@layout/spinr" android:layout_alignParentLeft="@string/left" android:layout_alignParentTop="@string/top" android:layout_alignParentRight="@string/right" android:layout_alignParentBottom="@string/bottom" android:layout_centerHorizontal="@string/centre" android:layout_centerVertical="@string/centre" />
    <ImageView android:id="@id/imageView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/splash" android:scaleType="fitXY" android:layout_toLeftOf="@id/progressBar" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:contentDescription="" />
</RelativeLayout>